--- a/src/app/collections-list/collections-list.component.html
+++ b/src/app/collections-list/collections-list.component.html
@@ -5,40 +5,39 @@
         <ion-icon name='arrow-back'></ion-icon>
       </ion-button>
     </ion-buttons>
-
-    <ion-title slot="end" >
+    <ion-title slot="end">
       Coleciones
-     </ion-title>
-
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="outer-content">
 
-    <ion-item *ngIf="collections.length > 0">
-        <p>No hi han colecions </p>
-      </ion-item> 
-
-<ion-list *ngIf="collections.length === 0" >
-  <ion-item  *ngFor="let collection of collections">
-    <span slot="start" class="dot"></span>
-    <ion-label>{{collection.name}}</ion-label>
+  <ion-item *ngIf="collections.length > 0">
+    <p>No hi han colecions </p>
   </ion-item>
 
-   
-</ion-list>
+  <ion-list *ngIf="!addcollection && collections.length === 0">
+    <ion-item *ngFor="let collection of collections">
+      <ion-input type='checkbox'></ion-input>
+      <ion-label>{{collection.name}}</ion-label>
+    </ion-item>
+  </ion-list>
 
-<ion-item>
-    <form formGroup]="authForm" (ngSubmit)="submitForm()">
-        <ion-input 
-        type='text' 
-        placeholder="Nombre de la coleción"
-        formControlName="collectionname"
-        placeholder="Username"
+  <ion-item *ngIf="addcollection">
+    <form [formGroup]="authForm" (ngSubmit)="submitForm()">
+      <ion-input type='text' placeholder="Nombre de la coleción" formControlName="collectionname" placeholder="Username"
         class="form-control form-control-lg"></ion-input>
-        <ion-button expand="block" shape="round" fill="outline" type="submit">
-            <ion-icon name="person"></ion-icon>Crear una nueva coleción
-        </ion-button>
+      <ion-button expand="block" shape="round" fill="outline" type="submit">
+        <ion-icon name="person"></ion-icon>Crear una nueva coleción
+      </ion-button>
     </form>
-   
   </ion-item>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="addcollection = !addcollection">
+      <ion-icon name="create"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+</ion-content>
