--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -7,8 +7,27 @@
       Lista de productos
     </ion-title>
     <ion-buttons slot="end">
-      <ion-icon name="search"></ion-icon>
-    </ion-buttons>
+        <ion-button (click)="cansearch()">
+          <ion-icon slot="icon-only" name="search"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-avatar slot="end">
+        <img *ngIf="!authenticated" [routerLink]="['/login']"
+          src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
+          alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
+  
+        <img *ngIf="authenticated" [routerLink]="['/profile', currentUser.usuario]" [src]="currentUser.avatar"
+          alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
+      </ion-avatar>
+  </ion-toolbar>
+  <ion-toolbar [hidden]="!search" [color]="authenticated == true ? 'dark' : 'default'">
+      <ion-buttons slot="start">
+        <ion-button (click)="cansearch()">
+          <ion-icon name='arrow-back'></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-searchbar [(ngModel)]="queryText" [color]="authenticated == true ? 'dark' : 'default'"
+        (ionChange)="updateSchedule()" placeholder="Search" animated autocorrect='on'></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 <ion-content>
