--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -18,17 +18,17 @@
       <ion-icon name="heart"></ion-icon>
       <ion-label>Favoritos</ion-label>
     </ion-tab-button>
-    <ion-tab-button routerLink="/collections">
-      <ion-icon name="journal"></ion-icon>
-      <ion-label>Coleciones</ion-label>
+    <ion-tab-button tab="tab3">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>Eventos</ion-label>
     </ion-tab-button>
     <ion-tab-button routerLink="/reserves">
       <ion-icon name="bookmarks"></ion-icon>
       <ion-label>Reservas</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tab3">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>Eventos</ion-label>
+    <ion-tab-button routerLink="/collections">
+      <ion-icon name="archive"></ion-icon>
+      <ion-label>Coleciones</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
