--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -10,29 +10,26 @@
 </ion-header>
 
 <ion-content ion-no-padding>
-  <div class="about-header" *ngFor="let info of infos; let i of index">
+  <div class="about-header" *ngFor="let info of books; let i of index">
     <img src="{{info.image}}" alt="{{info.titulo}}">
   </div>
-  <div class="about-info" *ngFor="let info of infos; let i of index">
+  <div class="about-info" *ngFor="let info of books; let i of index">
     <h4 class="ion-padding-start">{{info.titulo}}</h4>
-
-    <ion-buttons expanded>
-      <ion-button routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-        routerLink="/reserve/add/{{isbn}}">
-        <ion-icon name="bookmarks"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon name="heart" id="{{info.isbn}}" [color]="info.favorite == 1 ? 'danger':'default'"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon name="pin"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon name="archive"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-
-    <ion-list lines="none" *ngFor="let info of infos; let i of index">
+        <ion-buttons  class="ion-justify-content-center">
+            <ion-button (click)="reserve()">
+              <ion-icon name="bookmarks"></ion-icon>
+            </ion-button>
+            <ion-button  (click)="clickEventHandler()" >
+              <ion-icon name="heart"  [color]="info.favorite == 1 ? 'danger':'default'" ></ion-icon>
+            </ion-button>
+            <ion-button>
+              <ion-icon name="pin"></ion-icon>
+            </ion-button>
+            <ion-button (click)="clickEventHandlerSave()" >
+              <ion-icon name="archive" [color]="colorSecundary"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+    <ion-list lines="none" *ngFor="let info of books; let i of index">
       <ion-item>
         <ion-icon name="calendar" slot="start"></ion-icon>
         <ion-label position="stacked">Date</ion-label>
