--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -3,7 +3,7 @@
             <ion-toolbar >
                 <ion-item routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/profile">
                     <ion-avatar  slot="start">
-                        <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
+                        <img src="https://cdn1.iconfinder.com/data/icons/business-users/512/circle-512.png"
                             alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
                     </ion-avatar>
                     <ion-label>Jorge Beneyto Castelló</ion-label>
