--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar slot="start" *ngIf="!auth">
+  <ion-tab-bar slot="start" *ngIf="!authenticated">
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
       <ion-label>Pagina principal</ion-label>
@@ -9,7 +9,7 @@
       <ion-label>Eventos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-  <ion-tab-bar slot="start" *ngIf="auth" color="dark" ion-padding>
+  <ion-tab-bar slot="start" *ngIf="authenticated" color="dark" ion-padding>
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
       <ion-label>Principal</ion-label>
